app/styles/main.scss
/* ... */
/******************
*** Listings Page 
*******************/
#listings-page {

  .title-bar {
    background-color: $acc-light;
    border-radius: 10px;
    padding: 10px 15px;

    .main-col {
      text-align: center;
      padding-top: 20px;
    }

    .b4cm-icon {
      margin-top: -5px;
    }

    h2 {
      display: inline-block;
      padding: 0 0 0 20px;
    }

    h3 {
      display: inline-block;
      margin-left: 50px;
    }

    form {
      margin: 5px 0 0 100px;
    }

    h4 {
      display: inline-block;
    }

    select {
      margin: -10px 0 0 10px;
      width: 80px;
    }

    input {
      margin: -10px 0 0 10px;
      text-align: center;
      width: 150px;
    }

    button {
      margin: -10px 0 0 10px;
    }
  }

 .page {
    background-color: $acc-light;
    border-radius: 10px;
    padding: 20px 10px;
    min-height: 300px;
  }
  
  .listings {
    
    h6 {
      margin-top: -40px;
    }

    .add-spot {
      margin: -110px 0 0 500px;
    }

  }

  .listing {
    margin: 0 0 10px 0;
    padding: 0 10px;

    &:hover {
      cursor: pointer;
    }

    h4, h5 {
      margin: 0px;
    }

    .rank, .info, .crowd-bar, .watchers, .box {
      display: inline-block;
    }

    .rank {
      float: left;
    }

    .spot-pic {
      display: inline-block;
      padding: 0 5px;
      margin-top: -95px;
    }

    .info {
      padding: 0 0 0 5px;
    }

    .watchers {
      margin: 0 0 0 5px;
    }

    .crowd-rank {
      margin: 5px 0 0 0;
    }

    .box {
      height: 30px;
      width: 30px;

      h6 {
        display: inline;
        float: left;
        font-size: 10px;
        margin: 15px 0 0 2px;
      }
    }

    .watchers {
      float: right;
      margin: 5px 0 0 10px;
    }

    hr {
      margin-top: 15px;
      width: 100%;
    }

    .current-status {
      display: inline-block;
      float: left;
      margin: -90px 0 0 430px;
    }

    .status {
      margin: 0 0 0 68px;
    }

  }

  .map {
    margin: 0 0 0 20px;
  }

  .more {
    margin: -10px 0 0 0;

    a { 
      color: $text-dark;

      &:hover {
        color: $comp1-dark;
        cursor: pointer;
      }
    }
  }
}

/******************
*** Spot Page
*******************/
#spot-page {

  .title-bar {
    background-color: $acc-light;
    border-radius: 10px;
    padding: 10px 15px;

    .watch-comment-header {
      font-weight: bold;
      margin-left: 18px;
    }

    h2 {
      margin: 0 0 10px 0;
    }

    .details-left {
      display: inline-block;
      float: left;
      max-width: 300px;
      margin-top: -10px;
      vertical-align: top;

      h4 {
        margin-left: 10px;
      }

      .rating {
        margin: 30px 0 25px 0;
      }
    }

    .details-right {
      display: inline-block;
      margin: -20px 0 0 20px;
      vertical-align: top;

      h3 {
        margin-bottom: 0;
      }

      .spot-types {
        margin: 0 0 0 10px;
      }

      h5 {
        margin: -10px 0 0 20px;
      }
    }

    .text-ad {
      background-color: $acc-med;
      //margin-top: -20px;
      width: 100%;
      
      a {
        color: $text-light;
      }

      h6 {
        float: right;
        padding-right: 10px;
      }

      h5 {
        padding: 10px;
      }

      .author {
        margin: -20px 0 0 40px;
      }
    }
  }

  .type {
    display: inline-block;
    font-size: 18px;
    font-weight: bold;
    padding: 10px;
    text-align: center;
  }

  .visualize {
    @include page-container;
    background-color: $acc-light;
    border-radius: 10px;
    padding: 20px 0;
  }

  .reviews {
    background-color: $acc-light;
    border-radius: 10px;
    min-height: 400px;
    padding: 20px 15px;

    hr {
      margin-top: 5px 0;
      width: 640px;
    }

    .user {
      img {
        height: 40px;
        width: 40px;
      }
    }

    .info {
      p {
        margin: 20px 0 0 0;
      }
    }
  }

  .review-nums {
  }

  .review {

    .user {
      display: inline-block;
      margin: 10px 0 0 0;
    }

    .info {
      display: inline-block;
      float: right;
      padding: 8px 10px 0 0;
      width: 85%;
    }
  }

  .add-review {
    float: right;
    margin-top: -40px;
  }

  .find-nearby {
    padding: 0 0 0 70px;
    margin: 0 0 10px 0;

    h3 {
      display: inline-block;
      margin: 0;
    }
  }

  .nearby-type {
    padding: 0 0 5px 20px;

    div, h4 {
      display: inline-block;
      margin: 10px;
    }

    .b4cm-icon {
      height: 50px;
      width: 50px;
    }
  }

  .more {

    a { 
      color: $text-dark;

      &:hover {
        color: $comp1-dark;
        cursor: pointer;
      }
    }
  }
}

/******************
*** Sign Up Page 
*******************/
#sign-up, #sign-in {
  @include page-container;
  background-color: $acc-light;
  border-radius: 10px 10px 10px 10px;
  padding: 40px 0;


  .login-method {
    display: inline-block;
    text-align: center;
    padding: 20px;

    &.facebook .icon {
      background-position: 0 0;
    }

    &.twitter .icon {
      background-position: -41px 0;
    }

    &.github .icon {
      background-position: -83px 0;
    }

    &.persona .icon {
      background-position: -125px 0;
    }

    .icon {
      background: url('../images/social-icons.png');
      background-size: 250px 50px;
      width: 42px;
      height: 50px;
      margin: auto;
    }

  }

  .b4cm-signup, .b4cm-signin {
    display: inline-block;
    width: 380px;
    padding: 0 10px;
    vertical-align: top;

    .control-label {
      width: 100px;
    }

    .controls {
      margin-left: 110px;
    }
  }

  .third-party-signup {
    display: inline-block;
    width: 40%;
    vertical-align: top;

    div {
      text-align: center;
    }

    .login-method:hover {
      cursor: pointer;
    }
  }
}

/******************
*** Sign In Page 
*******************/
#sign-in {
  
  .login-method {
    display: inline-block;
  }
}
/* ... */

